@@ -1,3 +1,7 @@
+AD-2004-02-05-0: Bugfix:    If 'sge_mutex_lock/unlock()' do fail, the error
+                            code is now part of the log message.
+                 Changed:   lck
+
 SG-2004-02-05-0: Enhancem.: updated man pages to reflect my latest changes
                  Changed:   qdel.1, qmod.1, qstat.1, sge_types.1, submit.1
 
